--- a/theme/fibra-de-vidrio/diseno-medida.html
+++ b/theme/fibra-de-vidrio/diseno-medida.html
@@ -48,58 +48,60 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--  End Google Tag Manager (noscript)  -->
     </div>
-    <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
-      <div class="div-block-12">
-        <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
-          <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
-        </a>
-        <nav role="navigation" class="nav-menu w-nav-menu">
-          <div class="div-block-13">
-            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
-              <div class="dropdown-toggle w-dropdown-toggle">
-                <a href="{{ links.-824a8b9 }}" class="link-block-4 w-inline-block">
-                  <div class="nav-link-dropdown light">{{ texts.6451f65d }}</div>
-                  <div class="icon w-icon-dropdown-toggle"></div>
-                </a>
+    <div class="container-xlarge">
+      <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
+        <div class="div-block-12">
+          <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+            <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
+          </a>
+          <nav role="navigation" class="nav-menu w-nav-menu">
+            <div class="div-block-13">
+              <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+                <div class="dropdown-toggle w-dropdown-toggle">
+                  <a href="{{ links.-824a8b9 }}" class="link-block-4 w-inline-block">
+                    <div class="nav-link-dropdown light">{{ texts.6451f65d }}</div>
+                    <div class="icon w-icon-dropdown-toggle"></div>
+                  </a>
+                </div>
+                <nav class="dropdown-list w-dropdown-list">
+                  <a href="{{ links.3d2ce2b8 }}" class="dropdown-link w-dropdown-link">{{ texts.6176fac4 }}</a>
+                  <a href="{{ links.-47a2312a }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                  <a href="{{ links.-5f7c817c }}" class="dropdown-link w-dropdown-link">{{ texts.37bce494 }}</a>
+                  <a href="{{ links.-33d9e40b }}" class="dropdown-link w-dropdown-link">{{ texts.46cbae7 }}</a>
+                  <a href="{{ links.7700ae4e }}" class="dropdown-link w-dropdown-link">{{ texts.-339acbad }}</a>
+                  <a href="{{ links.-3ef94968 }}" class="dropdown-link w-dropdown-link">{{ texts.-18947bda }}</a>
+                </nav>
               </div>
-              <nav class="dropdown-list w-dropdown-list">
-                <a href="{{ links.3d2ce2b8 }}" class="dropdown-link w-dropdown-link">{{ texts.6176fac4 }}</a>
-                <a href="{{ links.-47a2312a }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
-                <a href="{{ links.-5f7c817c }}" class="dropdown-link w-dropdown-link">{{ texts.37bce494 }}</a>
-                <a href="{{ links.-33d9e40b }}" class="dropdown-link w-dropdown-link">{{ texts.46cbae7 }}</a>
-                <a href="{{ links.7700ae4e }}" class="dropdown-link w-dropdown-link">{{ texts.-339acbad }}</a>
-                <a href="{{ links.-3ef94968 }}" class="dropdown-link w-dropdown-link">{{ texts.-18947bda }}</a>
-              </nav>
-            </div>
-            <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
-              <div class="dropdown-toggle w-dropdown-toggle">
-                <a href="{{ links.66a76574 }}" class="link-block-4 w-inline-block">
-                  <div class="nav-link-dropdown light">{{ texts.3eda8ca }}</div>
-                  <div class="icon w-icon-dropdown-toggle"></div>
-                </a>
+              <div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+                <div class="dropdown-toggle w-dropdown-toggle">
+                  <a href="{{ links.66a76574 }}" class="link-block-4 w-inline-block">
+                    <div class="nav-link-dropdown light">{{ texts.3eda8ca }}</div>
+                    <div class="icon w-icon-dropdown-toggle"></div>
+                  </a>
+                </div>
+                <nav class="dropdown-list w-dropdown-list">
+                  <a href="{{ links.-637fe9a4 }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
+                  <a href="{{ links.-4e232277 }}" class="dropdown-link w-dropdown-link">{{ texts.3cfcd46 }}</a>
+                  <a href="{{ links.380712 }}" class="dropdown-link w-dropdown-link">{{ texts.33226165 }}</a>
+                  <a href="{{ links.60fec55c }}" class="dropdown-link w-dropdown-link">{{ texts.-7cd47973 }}</a>
+                </nav>
               </div>
-              <nav class="dropdown-list w-dropdown-list">
-                <a href="{{ links.-637fe9a4 }}" class="dropdown-link w-dropdown-link">{{ texts.-7714f1dc }}</a>
-                <a href="{{ links.-4e232277 }}" class="dropdown-link w-dropdown-link">{{ texts.3cfcd46 }}</a>
-                <a href="{{ links.380712 }}" class="dropdown-link w-dropdown-link">{{ texts.33226165 }}</a>
-                <a href="{{ links.60fec55c }}" class="dropdown-link w-dropdown-link">{{ texts.-7cd47973 }}</a>
-              </nav>
+              <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
+              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
+              <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
+              <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
+              <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
             </div>
-            <a href="{{ links.-32cd245 }}" class="nav-link light">{{ texts.-1dca6e3f }}</a>
-            <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
-            <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
-            <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
-            <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
-          </div>
-          <div class="nav-menu-right">
-            <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
-            <a href="{{ links.768ad3ac }}" class="telefono">{{ texts.-70c0b1fd }}</a>
-          </div>
-        </nav>
-        <div class="menu-button w-nav-button">
-          <div class="con-menu-servicios">
-            <div>{{ texts.-657ae5c3 }}</div>
-            <div class="icon-4 w-icon-nav-menu"></div>
+            <div class="nav-menu-right">
+              <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
+              <a href="{{ links.768ad3ac }}" class="telefono">{{ texts.-70c0b1fd }}</a>
+            </div>
+          </nav>
+          <div class="menu-button w-nav-button">
+            <div class="con-menu-servicios">
+              <div>{{ texts.-657ae5c3 }}</div>
+              <div class="icon-4 w-icon-nav-menu"></div>
+            </div>
           </div>
         </div>
       </div>
@@ -134,8 +136,19 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <h1 class="heading-2 center">{{ texts.-4ee4f0e7 }}</h1>
           <p class="paragraph dark medium center">{{ texts.-6503cab5 }}<br>{{ texts.-1522c8cf }}</p>
           <p class="paragraph dark medium center">{{ texts.-70e87127 }}</p>
+          <div class="div-block-17 margeninferior">
+            <a href="{{ links.768ad3ac }}" class="link-block-2 w-inline-block">
+              <p class="paragraph dark big center">{{ texts.5401eebe }}</p>{%- image images.-26549a73.url, images.-26549a73.alt, '[]', 'width="20" class="icono-telefono"' -%}
+              <p class="paragraph dark big center">{{ texts.-70c0b1fd }}</p>
+            </a>
+            <a href="{{ links.75206762 }}" class="link-block-2-copy whatsapp w-inline-block">{%- image images.-42a9d590.url, images.-42a9d590.alt, '[{"max":10000,"size":"30px"}]', 'width="30" class="icono-whatsapp"' -%}
+              <p class="paragraph dark big center whatsapp">{{ texts.-59735f28 }}</p>
+            </a>
+            <a href="{{ links.7c9fd389 }}" class="link-block-2-copy whatsapp w-inline-block">{%- image images.-42a9d590.url, images.-42a9d590.alt, '[{"max":10000,"size":"30px"}]', 'width="30" class="icono-whatsapp"' -%}
+              <p class="paragraph dark big center whatsapp">{{ texts.-70c0b1fd }}</p>
+            </a>
+          </div>
           <a href="{{ links.-6164a4a }}" class="boton-naranja min-300 w-button">{{ texts.46d7d800 }}</a>
-          <a href="{{ links.-41af5612 }}" class="boton-naranja min-300-gris w-button">{{ texts.2e75ac0 }}</a>
         </div>
         <div id="w-node-_4c43d220-f9cf-ba31-1bd8-0d7cda6d2486-e8114c96" class="div-block-16 vertical-full-width">
           <div data-delay="3000" data-animation="cross" class="slider w-slider" data-autoplay="true" data-easing="ease" data-hide-arrows="false" data-disable-swipe="false" data-autoplay-limit="0" data-nav-spacing="3" data-duration="500" data-infinite="true">
@@ -250,7 +263,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <div class="div-center vertical vertical-center-contacto">
         <div class="logo-fibra micro">{{ texts.668c7f5d }}</div>{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120"' -%}
         <a href="{{ links.-6164a4a }}" class="boton-naranja min-300-copy w-button">{{ texts.46d7d800 }}</a>
-        <a href="{{ links.23 }}" class="boton-naranja min-300-gris w-button">{{ texts.2e75ac0 }}</a>
+        <a href="{{ links.666183d6 }}" class="boton-naranja w-button">{{ texts.-1465f815 }}</a>
       </div>
     </div>
   </div>
@@ -281,7 +294,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           <div class="text-block-1">{{ texts.7708558d }}</div>
           <a href="{{ links.3ce9a87c }}" class="link-footer-telefono">{{ texts.16679d29 }}</a>
           <div class="text-block-1">{{ texts.78bcd6e2 }}</div>
-          <a href="{{ links.23 }}" class="link-footer">{{ texts.-ed7a307 }}</a>
+          <a href="{{ links.23 }}" class="link-footer"><strong>{{ texts.50345a92 }}</strong> <br>{{ texts.-42e7c579 }}</a>
           <a href="{{ links.-4886a790 }}" target="_blank" rel="noreferrer" class="link-footer small-underline">{{ texts.-6e2fc850 }}</a>
         </div>
       </div>
