--- a/theme/[categoria].html
+++ b/theme/[categoria].html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-wf-page="609b09e44168f35eed114c94" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
   <meta charset="utf-8">
-  <title>Copy of Europisos v2 (sin fibra de vidrio macetas)</title>
+  <title>Catálogo de pisos de madera - Europisos </title>
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
