--- a/theme/[categoria].html
+++ b/theme/[categoria].html
@@ -130,7 +130,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         </div>
         <div class="w-tab-content">
           <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active">
-            {%- assign collection = collections.pisos | sort: "-created-on" -%}<div class="collection-list-wrapper-categoria w-dyn-list">
+            {%- assign collection = collections.pisos | filter: "f_categoria,eq,DYN_CONTEXT", "ALL", page.inputPath | sort: "-created-on" -%}<div class="collection-list-wrapper-categoria w-dyn-list">
               {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo catalogo w-dyn-items">
                 {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-piso w-dyn-item">
                   <a href="{{ item.url }}" class="link-block-piso w-inline-block" style="background-image: url('{{item.data.f_foto-principal-de-producto.url}}');"></a>
