--- a/theme/contacto.html
+++ b/theme/contacto.html
@@ -40,21 +40,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keywords" content="pisos de madera, decks, pérgolas, vigas de ingeniería, sintético, PVC, resina, resinas, mantenimiento, guadalajara, mexico, instalación">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
-        }</style><style>picture { border: 0;
-        max-width: 100%;
-        vertical-align: middle;
-        display: inline-block; }</style></head>
+        }</style></head>
 <body>
   <div class="menu">
-    <div class="w-embed w-iframe">
-      <!--  Google Tag Manager (noscript)  -->
+    <div class="w-embed w-iframe"><!--  Google Tag Manager (noscript)  -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--  End Google Tag Manager (noscript)  -->
     </div>
     <div class="container-xlarge">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
         <div class="div-block-12">
-          <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <a href="{{ links.2f }}" class="brand-3 w-nav-brand"><img src="{{ images.5794294a.url }}" width="95" alt="{{ images.5794294a.alt | escape }}" height="98" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;22vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;65px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;70px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;9vw&quot;}]" class="logo">
             <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
@@ -155,13 +151,13 @@ function validateRecaptcha() {
         <h2 class="heading-2 center">{{ texts.126b3161 }}</h2>
         <div class="div-block-17 margeninferior">
           <a href="{{ links.768ad3ac }}" class="link-block-2 w-inline-block">
-            <p class="paragraph dark big center">{{ texts.5401eebe }}</p>{%- image images.-26549a73.url, images.-26549a73.alt, '[]', 'width="20" class="icono-telefono"' -%}
+            <p class="paragraph dark big center">{{ texts.5401eebe }}</p><img src="{{ images.-26549a73.url }}" width="20" alt="{{ images.-26549a73.alt | escape }}" class="icono-telefono">
             <p class="paragraph dark big center">{{ texts.-70c0b1fd }}</p>
           </a>
-          <a href="{{ links.75206762 }}" class="link-block-2-copy whatsapp w-inline-block">{%- image images.-42a9d590.url, images.-42a9d590.alt, '[{"max":10000,"size":"30px"}]', 'width="30" class="icono-whatsapp"' -%}
+          <a href="{{ links.75206762 }}" class="link-block-2-copy whatsapp w-inline-block"><img src="{{ images.-42a9d590.url }}" width="30" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;30px&quot;}]" alt="{{ images.-42a9d590.alt | escape }}" class="icono-whatsapp">
             <p class="paragraph dark big center whatsapp">{{ texts.-59735f28 }}</p>
           </a>
-          <a href="{{ links.7c9fd389 }}" class="link-block-2-copy whatsapp w-inline-block">{%- image images.-42a9d590.url, images.-42a9d590.alt, '[{"max":10000,"size":"30px"}]', 'width="30" class="icono-whatsapp"' -%}
+          <a href="{{ links.7c9fd389 }}" class="link-block-2-copy whatsapp w-inline-block"><img src="{{ images.-42a9d590.url }}" width="30" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;30px&quot;}]" alt="{{ images.-42a9d590.alt | escape }}" class="icono-whatsapp">
             <p class="paragraph dark big center whatsapp">{{ texts.-70c0b1fd }}</p>
           </a>
         </div>
@@ -170,9 +166,13 @@ function validateRecaptcha() {
           <p class="paragraph dark medium center">{{ texts.16679d29 }}</p>
         </a>
         <h3 class="heading-3">{{ texts.-79ad9a64 }}</h3>
-        <p>{{ texts.464bfa1b }}</p>
+        <h4 class="heading-3 anuncio-cita">{{ texts.-1a6199e6 }}</h4>
+        <p class="paragraph dark medium center">{{ texts.8eedd9 }}</p>
+        <a href="{{ links.75206762 }}" class="link-block-2-copy whatsapp w-inline-block"><img src="{{ images.-42a9d590.url }}" width="30" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;30px&quot;}]" alt="{{ images.-42a9d590.alt | escape }}" class="icono-whatsapp">
+          <p class="paragraph dark big center whatsapp">{{ texts.-59735f28 }}</p>
+        </a>
         <div class="div-mapa">
-          <div class="w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14931.040473292165!2d-103.3885369!3d20.6793361!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9ea1951e284bf9fc!2sEuropisos+p%C3%A9rgolas%2C+decks+y+pisos+de+madera!5e0!3m2!1ses-419!2smx!4v1515972379920" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen=""></iframe></div>
+          <div class="margin-top margin-medium w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14931.040473292165!2d-103.3885369!3d20.6793361!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9ea1951e284bf9fc!2sEuropisos+p%C3%A9rgolas%2C+decks+y+pisos+de+madera!5e0!3m2!1ses-419!2smx!4v1515972379920" width="100%" height="300" frameborder="0" style="border:0" allowfullscreen=""></iframe></div>
           <p class="paragraph dark medium center small">{{ texts.-ed7a307 }}</p>
         </div>
       </div>
@@ -181,7 +181,7 @@ function validateRecaptcha() {
   <div class="footer">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo"><img src="{{ images.34cdd91c.url }}" width="120" height="124" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
