--- a/theme/pisosdemadera.html
+++ b/theme/pisosdemadera.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html data-wf-page="609b09e44168f369f6114ca3" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>
+<html data-wf-page="609b09e44168f369f6114ca3" data-wf-site="609b09e44168f33d25114c8c" lang="es-MX"><head>{%- seo seo -%}
   <meta charset="utf-8">
-  <title>Pisos de madera sólida, ingeniería y duela</title>
-  <meta content="25 años de experiencia en la instalación de pisos de madera, contamos con la más amplia gama de materiales. Precio y distribución desde Estados Unidos." name="description">
-  <meta content="Pisos de madera sólida, ingeniería y duela" property="og:title">
-  <meta content="25 años de experiencia en la instalación de pisos de madera, contamos con la más amplia gama de materiales. Precio y distribución desde Estados Unidos." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/609b09e44168f33d25114c8c/65cedfa5c70b035a9f5f1218_europisos-ogg.webp" property="og:image">
-  <meta content="Pisos de madera sólida, ingeniería y duela" property="twitter:title">
-  <meta content="25 años de experiencia en la instalación de pisos de madera, contamos con la más amplia gama de materiales. Precio y distribución desde Estados Unidos." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/609b09e44168f33d25114c8c/65cedfa5c70b035a9f5f1218_europisos-ogg.webp" property="twitter:image">
-  <meta property="og:type" content="website">
-  <meta content="summary_large_image" name="twitter:card">
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
   <meta content="width=device-width, initial-scale=1" name="viewport">
   <link href="/assets/css/normalize.css" rel="stylesheet" type="text/css">
   <link href="/assets/css/components.css" rel="stylesheet" type="text/css">
@@ -40,21 +40,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <meta name="keywords" content="pisos de madera">
 {{ settings.site.header_additional_content }}{%- include "partials/_site-css-variables" -%}<style>.w-video.w-embed {
             aspect-ratio: 16 / 9;
-        }</style><style>picture { border: 0;
-        max-width: 100%;
-        vertical-align: middle;
-        display: inline-block; }</style></head>
+        }</style></head>
 <body>
   <div class="menu">
-    <div class="w-embed w-iframe">
-      <!--  Google Tag Manager (noscript)  -->
+    <div class="w-embed w-iframe"><!--  Google Tag Manager (noscript)  -->
       <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WXKJKD4" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <!--  End Google Tag Manager (noscript)  -->
     </div>
     <div class="container-xlarge">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navbar w-nav">
         <div class="div-block-12">
-          <a href="{{ links.2f }}" class="brand-3 w-nav-brand">{%- image images.5794294a.url, images.5794294a.alt, '[{"max":479,"size":"22vw"},{"max":767,"size":"65px"},{"max":991,"size":"70px"},{"max":10000,"size":"9vw"}]', 'width="95" height="98" class="logo"' -%}
+          <a href="{{ links.2f }}" class="brand-3 w-nav-brand"><img src="{{ images.5794294a.url }}" width="95" alt="{{ images.5794294a.alt | escape }}" height="98" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;22vw&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;65px&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;70px&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;9vw&quot;}]" class="logo">
             <div class="descripcion-link">{{ texts.5fce79e3 }}</div>
           </a>
           <nav role="navigation" class="nav-menu w-nav-menu">
@@ -90,10 +86,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 </nav>
               </div>
               <a href="{{ links.-32cd245 }}" aria-current="page" class="nav-link light w--current">{{ texts.-1dca6e3f }}</a>
-              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.-7cd47973 }}</a>
-              <a href="{{ links.-5c8c85ba }}" class="nav-link light">{{ texts.37bce494 }}</a>
-              <a href="{{ links.-343edc94 }}" class="nav-link light">{{ texts.75617034 }}</a>
-              <a href="{{ links.-4a5cfeee }}" class="nav-link light">{{ texts.-7a9c091f }}</a>
+              <a href="{{ links.-7885b0ad }}" class="nav-link light">{{ texts.4d0038b0 }}</a>
+              <a href="{{ links.-5c8c85ba }}" class="nav-link light hide">{{ texts.37bce494 }}</a>
+              <a href="{{ links.-343edc94 }}" class="nav-link light hide">{{ texts.75617034 }}</a>
+              <a href="{{ links.-4a5cfeee }}" class="nav-link light hide">{{ texts.-7a9c091f }}</a>
             </div>
             <div class="nav-menu-right">
               <a href="{{ links.-3f05918f }}" class="contacto-header">{{ texts.-1df83b91 }}</a>
@@ -102,7 +98,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
           </nav>
           <div class="menu-button w-nav-button">
             <div class="con-menu-servicios">
-              <div>{{ texts.-657ae5c3 }}</div>
+              <div>{{ texts.240d5f }}</div>
               <div class="icon-4 w-icon-nav-menu"></div>
             </div>
           </div>
@@ -136,10 +132,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="section-categorias-catalogo">
     <div class="padding-global">
       <div class="container-large">
-        {%- assign collection = collections.categoria | filter: "f_deck,ne,true", "ALL", page.inputPath | sort: "-created-on" -%}<div class="w-dyn-list">
+        {%- assign collection = collections.categoria | sort: "f_deck" -%}<div class="w-dyn-list">
           {%- unless collection.length == 0 -%}<div role="list" class="contenedor-catalogo w-dyn-items">
             {%- for item in collection -%}<div role="listitem" class="contenedor-categoria-catalogo w-dyn-item">
-              <a href="{{ item.url }}" class="link-block-5link-block-5 w-inline-block">{%- image item.data.f_imagen.url, item.data.f_imagen.alt, '[{"max":479,"size":"200px"},{"max":767,"size":"46vw"},{"max":991,"size":"47vw"},{"max":10000,"size":"31vw"}]', 'loading="lazy" class="imagen-boton-cat-piso"' -%}</a>
+              <a href="{{ item.url }}" class="link-block-5link-block-5 w-inline-block"><img loading="lazy" data-sizes="[{&quot;max&quot;:479,&quot;size&quot;:&quot;200px&quot;},{&quot;max&quot;:767,&quot;size&quot;:&quot;46vw&quot;},{&quot;max&quot;:991,&quot;size&quot;:&quot;47vw&quot;},{&quot;max&quot;:10000,&quot;size&quot;:&quot;31vw&quot;}]" src="{{ item.data.f_imagen.url }}" alt="{{ images.0.alt | escape }}" class="imagen-boton-cat-piso"></a>
               <h2 class="h2-small">{{ item.data.title }}</h2>
               <p class="paragraph dark small center">{{ item.data.f_descripcion }}</p>
               <a href="{{ item.url }}" class="boton hide w-button">{{ texts.-72aeb621 }}</a>
@@ -206,7 +202,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <div class="footer">
     <div class="row w-row">
       <div class="column w-col w-col-4">
-        <div class="div-footer-logo">{%- image images.34cdd91c.url, images.34cdd91c.alt, '[{"max":10000,"size":"120px"}]', 'width="120" height="124"' -%}
+        <div class="div-footer-logo"><img src="{{ images.34cdd91c.url }}" width="120" height="124" data-sizes="[{&quot;max&quot;:10000,&quot;size&quot;:&quot;120px&quot;}]" alt="{{ images.34cdd91c.alt | escape }}">
           <div class="frase">{{ texts.70368987 }}<br>{{ texts.-132f9e7e }}</div>
         </div>
       </div>
@@ -246,4 +242,4 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <script src="/assets/external/jquery-3.5.1.min.dc5e7f18c8.js" type="text/javascript" crossorigin="anonymous"></script>
   <script src="/assets/js/europisos-v2-8242e23c56fba3ffb7fa403b06.js" type="text/javascript"></script>
 
-<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}</body></html>
+<script src="/assets/js/udesly-11ty.min.js" async="" defer=""></script>{{ settings.site.footer_additional_content }}<script type="module">import*as UdeslyBanner from"https://cdn.jsdelivr.net/npm/udesly-ad-banner@0.0.4/loader/index.js";UdeslyBanner.defineCustomElements(),document.body.append(document.createElement("udesly-banner"));</script></body></html>
